--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -7,7 +7,7 @@
     background: linear-gradient(
     rgba(255,255,255,0.5),
     rgba(255,255,255,0.5) ),
-    url(https://xoxobella.com/wp-content/uploads/2020/08/instagram_captions_for_nature_photos-3.jpg)
+    url(https://i.insider.com/624d87b40e1f410018b7a2c4?width=1200&format=jpeg)
     ;
     background-size: cover;
 }
