--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,5 @@
 .header{
-    margin-top: 60px;
+    margin-top: 125px;
 }
 
 .headerTitles{
@@ -7,18 +7,25 @@
    flex-direction: column;
    align-items: center;
    font-family:'Lora', serif; 
-   color:#444;
+   color:gray;
 }
 .headerTitleSm{
+    display: flex;
     position: absolute;
-    top: 18%;
-    font-size: 20px;
-
+    top: 12%;
+    font-size: 50px;
+    align-items: center;
+    padding: 10px;
+   
 }
 .headerTitleLg{
     position: absolute;
-    top: 20%;
-    font-size: 100px;
+    top: 100%;
+    font-size: 40px;
+    text-align: center;
+    align-items: center;
+    margin-left: 35%;
+    
 }
 .headerImg{
     width: 100%;
